data/error.log
【Archangel Death Report】
You crashed in the last epoch. Here is the stack trace:

WARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv

[notice] A new release of pip is available: 24.0 -> 26.0.1
[notice] To update, run: pip install --upgrade pip
Traceback (most recent call last):
  File "/app/main.py", line 2, in <module>
    from src.web.server import run_server
  File "/app/src/web/server.py", line 9
    return f'<html><body><h1>Adam's Evolution</h1><pre>{content}</pre></body></html>'
                                                                                    ^
SyntaxError: unterminated string literal (detected at line 9)
